# humanbound

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLA.md  CNAME  CONTRIBUTING.md  DCO.md  LICENSE  NOTICE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  index.html  llms.txt  pyproject.toml  robots.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  contract-check.yml  dco.yml  docs.yml  release.yml
aisecops/continuous-monitoring/: index.html
aisecops/coverage/: index.html
aisecops/findings/: index.html
authentication/: index.html
community/: index.html
compat/humanbound-cli/: README.md  pyproject.toml
compliance/: index.html
concepts/llm-as-judge/: index.html
concepts/red-coworker/: index.html
concepts/security-posture/: index.html
defense/firewall/: index.html
defense/guardrails/: index.html
deployment/: index.html
docs/: mkdocs.yml
docs/docs/: CNAME  authentication.md  community.md  deployment.md  index.md  shell-completion.md
docs/docs/aisecops/: continuous-monitoring.md  coverage.md  findings.md
docs/docs/compliance/: index.md
docs/docs/concepts/: ai-secops.md  llm-as-judge.md  red-coworker.md  security-posture.md
docs/docs/defence/: firewall.md
docs/docs/defense/: firewall.md  guardrails.md
docs/docs/getting-started/: agent-config.md  installation.md  quick-start.md
docs/docs/integrations/: cicd.md  discovery.md  firewall.md  guardrails.md  mcp.md  siem.md  telemetry.md
docs/docs/local-engine/: index.md  orchestrators.md  output-formats.md  provider-config.md  scope-discovery.md
docs/docs/management/: api-keys.md  collaboration.md  experiments.md  members.md  projects.md  providers.md
docs/docs/methodology/: adversarial-engine.md
docs/docs/plugins/: index.md
docs/docs/reference/: commands.md  glossary.md
docs/docs/stylesheets/: extra.css
docs/docs/testing/: assessments.md  collaborative-redteam.md  log-upload.md  red-coworker.md  reports.md  test-command.md
docs/hooks/: faq_render.py  glossary_autolink.py  lint.py  llms_txt.py  schema.py
docs/overrides/: main.html
docs/overrides/partials/: header.html  posthog.html  reddit-pixel.html
getting-started/agent-config/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
humanbound/: __init__.py  bot.py  callbacks.py  orchestrators.py  runner.py  schemas.py
humanbound_cli/: __init__.py  client.py  config.py  exceptions.py  main.py  mcp_server.py  report.py  report_builder.py  vendors.py
humanbound_cli/adapters/: __init__.py  promptfoo.py  pyrit.py
humanbound_cli/commands/: __init__.py  _capabilities_flag.py  _report_helper.py  api_keys.py  assessments.py  auth.py  campaigns.py  completion.py  config_cmd.py  connect.py  connectors.py  coverage.py  discover.py  docs.py  experiments.py  findings.py  firewall.py  guardrails.py  init.py  logs.py  mcp.py  members.py  monitor.py  orgs.py  posture.py  projects.py  providers.py  redteam.py  report.py  scan.py  sentinel.py  telemetry.py  test.py  upload_logs.py  webhooks.py
humanbound_cli/connectors/: __init__.py  microsoft.py
humanbound_cli/engine/: __init__.py  bot.py  callbacks.py  capabilities_writer.py  compliance.py  local_runner.py  platform_runner.py  presenter.py  runner.py  schemas.py  scope.py
humanbound_cli/engine/llm/: __init__.py  azureopenai.py  claude.py  gemini.py  grok.py  ollama.py  openai.py
humanbound_cli/engine/orchestrators/: base.py
humanbound_cli/extractors/: __init__.py  openapi.py  repo.py
humanbound_cli/extractors/capabilities/: __init__.py  display.py  patterns.py  python_ast.py  scanner.py  types.py  walker.py
humanbound_cli/pytest_plugin/: __init__.py  fixtures.py  report.py
humanbound_cli/telemetry/: __init__.py  client.py  consent.py
humanbound_cli/templates/: report_base.html
humanbound_cli/templates/compliance/: banking.yaml  ecommerce.yaml  eu-ai-act.yaml  healthcare.yaml  insurance.yaml  (+1 more)
integrations/cicd/: index.html
integrations/discovery/: index.html
integrations/mcp/: index.html
integrations/siem/: index.html
integrations/telemetry/: index.html
local-engine/: index.html
local-engine/orchestrators/: index.html
local-engine/output-formats/: index.html
local-engine/provider-config/: index.html
local-engine/scope-discovery/: index.html
management/api-keys/: index.html
management/collaboration/: index.html
management/experiments/: index.html
management/members/: index.html
management/projects/: index.html
management/providers/: index.html
methodology/adversarial-engine/: index.html
plugins/: index.html
reference/commands/: index.html
reference/glossary/: index.html
search/: search_index.json
shell-completion/: index.html
testing/assessments/: index.html
testing/collaborative-redteam/: index.html
testing/log-upload/: index.html
testing/red-coworker/: index.html
testing/reports/: index.html
testing/test-command/: index.html
tests/unit/: conftest.py  test_api_keys.py  test_assessments.py  test_auth.py  test_campaigns.py  test_capabilities_catalog.py  test_capabilities_display.py  test_capabilities_flag.py  test_capabilities_patterns.py  test_capabilities_python_ast.py  test_capabilities_scanner.py  test_capabilities_snapshots.py  test_capabilities_types.py  test_capabilities_walker.py  test_capabilities_writer.py  test_client.py  test_client_get_project.py  test_commands_unit.py  test_completion.py  test_connect.py  test_connect_capabilities_local.py  test_connect_capabilities_platform.py  test_contract_fidelity.py  test_docs.py  test_docs_hooks_faq_render.py  test_docs_hooks_glossary_autolink.py  test_docs_hooks_lint.py  test_docs_hooks_llms_txt.py  test_docs_hooks_schema.py  test_engine_bot.py  test_engine_interrupt.py  test_errored_run_reporting.py  test_experiment_config_display.py  test_experiments.py  test_findings.py  test_firewall.py  test_guardrails.py  test_insights_wording.py  test_json_output.py  test_llm_pinger.py  (+18 more)
(+26 files in other folders)
