[build-system]
requires = ["setuptools>=61.0,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "humanbound-cli"
version = "1.0.0"
authors = [
  { name="Kostas Siabanis", email="hello@humanbound.ai" },
  { name="Demetris Gerogiannis", email="hello@humanbound.ai" },
]
description = "Humanbound CLI - command line interface for AI agent security testing."
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Framework :: Pytest",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "msal>=1.31.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
engine = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-generativeai>=0.3.0",
    "websockets>=12.0",
]
firewall = [
    "hb-firewall",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
]
mcp = [
    "mcp>=1.2.0",
]
pytest = [
    "pytest>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
hb = "humanbound_cli.main:main"

[project.entry-points.pytest11]
hb = "humanbound_cli.pytest_plugin"

[project.urls]
Homepage = "https://github.com/Humanbound/humanbound-cli"
Documentation = "https://docs.humanbound.ai/cli"
Issues = "https://github.com/Humanbound/humanbound-cli/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
humanbound_cli = ["templates/*.html", "templates/*.svg"]

[tool.pytest.ini_options]
markers = [
    "hb: mark test as a Humanbound security test",
    "hb_category(name): mark test for a specific category",
]
