[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanbound-cli"
version = "1.2.1"
description = "DEPRECATED: renamed to 'humanbound'"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Humanbound", email = "hello@humanbound.ai"},
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "humanbound==2.0.1",
]

[project.urls]
Homepage = "https://github.com/humanbound/humanbound"
Repository = "https://github.com/humanbound/humanbound"

# This stub ships no Python modules — the only job is to redirect the
# 'humanbound-cli' PyPI name to the renamed 'humanbound' package via
# the dependency above. Installing it pulls in humanbound; existing
# 'hb' CLI, 'import humanbound_cli', and all prior behavior continue
# to work through the main package.
[tool.setuptools]
packages = []
